--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.0",
+		"bull": "^3.18.0",
 		"cloudinary": "^1.23.0",
 		"config": "^3.3.1",
 		"express": "^4.17.1",
