--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"bcrypt": "^5.0.0",
 		"bull": "^3.18.0",
 		"cloudinary": "^1.23.0",
+		"concurrently": "^5.3.0",
 		"config": "^3.3.1",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
